--- a/CPSC483_colab0.ipynb
+++ b/CPSC483_colab0.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CPSC483_Colab0",
+      "name": "CPSC483_colab0",
       "provenance": [],
       "authorship_tag": "ABX9TyMavdIk4oGNO+v6DvTX2E8V",
       "include_colab_link": true
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Graph-and-Geometric-Learning/CPSC483-colab/blob/main/colab0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/https://github.com/Graph-and-Geometric-Learning/CPSC483-colab/blob/main/CPSC483_colab0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -83,7 +83,7 @@
         },
         "outputId": "c9496658-5093-4b8d-cdea-ea9a2be9749a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +329,7 @@
       "metadata": {
         "id": "6qFGvRYJSErW"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "8gn1LsIryRDP"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +587,7 @@
       "metadata": {
         "id": "-23N4YwR2b4y"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +660,7 @@
         "id": "VDs-UuOlf4md",
         "outputId": "02ac699b-ba2a-490a-80a2-ba9ab60457a1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +708,7 @@
         "id": "HIaY37ozhB7C",
         "outputId": "0ab240b9-74f2-4b60-d637-39227d3e68bb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +748,7 @@
         "id": "ZZTKpDUW2kOo",
         "outputId": "b8e32323-801e-4e5a-ac3b-8b3412a7cd2b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
