--- a/CPSC483_colab0.ipynb
+++ b/CPSC483_colab0.ipynb
@@ -75,6 +75,9 @@
         "# import the pytorch library into environment and check its version\n",
         "import torch\n",
         "print(\"Using torch\", torch.__version__)"
+        "# check if GPU is available and detectable\n"
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n"
+        "print('Using device:', device)\n"
       ],
       "metadata": {
         "id": "N3aXUWpFlcnj",
