--- a/CPSC483_colab0.ipynb
+++ b/CPSC483_colab0.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "# check if GPU is available and detectable. cpu is ok for this homework.\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print('Using device:', device)\n"
+    "print('Using device:', device)"
    ]
   },
   {
@@ -95,24 +95,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ybw_wwuStyHo",
-    "outputId": "efcbfefe-03a7-4ab9-ab35-c740ebefb2e7"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1, 2, 3])\n",
-      "tensor([[1, 2, 3],\n",
-      "        [4, 5, 6]])\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# construct a 1-D tensor from a list\n",
     "x = torch.tensor([1, 2, 3])\n",
