--- a/CPSC483_colab0.ipynb
+++ b/CPSC483_colab0.ipynb
@@ -55,22 +55,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "N3aXUWpFlcnj",
-    "outputId": "c9496658-5093-4b8d-cdea-ea9a2be9749a"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using torch 1.12.1+cu113\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# import the pytorch library into environment and check its version\n",
     "import torch\n",
@@ -673,7 +659,7 @@
     }
    ],
    "source": [
-    "def get_num_classes(pyg_dataset):\n",
+    "def get_num_classes(dataset):\n",
     "  # TODO: Implement a function that takes a dataset object\n",
     "  # and returns the number of classes for that dataset.\n",
     "\n",
@@ -1043,17 +1029,8 @@
    "source": [
     "model.load_state_dict(torch.load('model.pt'))\n",
     "\n",
-    "test_loss, test_acc = evaluate(model, test_loader, loss_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "fi6kkevhgR7b"
-   },
-   "outputs": [],
-   "source": [
+    "test_loss, test_acc = evaluate(model, test_loader, loss_fn)\n",
+    "\n",
     "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
