--- a/CPSC483_colab1.ipynb
+++ b/CPSC483_colab1.ipynb
@@ -55,23 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "N3aXUWpFlcnj",
-    "outputId": "53c32f5f-0484-45d2-de66-aabdd56798bb"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using torch 1.12.1+cu113\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# import the pytorch library into environment and check its version\n",
     "import os\n",
@@ -337,12 +323,12 @@
     "\n",
     "def get_idx_with_most_neighbors(data):\n",
     "  # TODO: Implement a function that takes a dataset object\n",
-    "  # and returns the number of classes for that dataset.\n",
+    "  # and returns the node's index that has the greatest amount of neighbors.\n",
     "\n",
     "  idx = -1\n",
     "\n",
     "  ############# Your code here ############\n",
-    "  ## (~2 line of code)\n",
+    "  ## (~3 line of code)\n",
     "  \n",
     "  #########################################\n",
     "\n",
